// Original file: proto/user.proto

import type { UserData as _userService_UserData, UserData__Output as _userService_UserData__Output } from '../userService/UserData';

export interface CreateUserResponse {
  'user'?: (_userService_UserData | null);
}

export interface CreateUserResponse__Output {
  'user': (_userService_UserData__Output | null);
}
