// Original file: proto/user.proto

import type { UserData as _userService_UserData, UserData__Output as _userService_UserData__Output } from '../userService/UserData';

export interface GetUserResponse {
  'user'?: (_userService_UserData | null);
}

export interface GetUserResponse__Output {
  'user': (_userService_UserData__Output | null);
}
