// Original file: proto/user.proto


export interface UpdateUserRequest {
  'id'?: (string);
  'email'?: (string);
  'lastName'?: (string);
  'firstName'?: (string);
  'patronymic'?: (string);
  '_email'?: "email";
  '_lastName'?: "lastName";
  '_firstName'?: "firstName";
  '_patronymic'?: "patronymic";
}

export interface UpdateUserRequest__Output {
  'id': (string);
  'email'?: (string);
  'lastName'?: (string);
  'firstName'?: (string);
  'patronymic'?: (string);
  '_email'?: "email";
  '_lastName'?: "lastName";
  '_firstName'?: "firstName";
  '_patronymic'?: "patronymic";
}
