// Original file: proto/user.proto

import type { UserData as _userService_UserData, UserData__Output as _userService_UserData__Output } from '../userService/UserData';

export interface UpdateUserResponse {
  'user'?: (_userService_UserData | null);
}

export interface UpdateUserResponse__Output {
  'user': (_userService_UserData__Output | null);
}
